samples/_failures_safe/1761624786_ef37bc_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0aece346.c: In function ‘write_data’:
./samples/SAFE/__tmp_0aece346.c:142:11: error: expected ‘;’ at end of input
  142 |     printf
      |           ^
      |           ;
./samples/SAFE/__tmp_0aece346.c:142:5: error: expected declaration or statement at end of input
  142 |     printf
      |     ^~~~~~
